// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders with default values 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <h2
            style="font-weight: bold; margin: 0px; font-size: 24px;"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Heading renders with style 1`] = `
<DocumentFragment>
  <table
    bgcolor="#444333"
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          align="center"
          style="background-color: rgb(68, 67, 51); text-align: center; padding: 15px 8px 10px 24px;"
        >
          <h1
            style="color: rgb(16, 16, 16); font-weight: normal; text-align: center; margin: 0px; font-family: Bahnschrift, "DIN Alternate", "Franklin Gothic Medium", "Nimbus Sans Narrow", sans-serif-condensed, sans-serif; font-size: 32px;"
          >
            Hello world!
          </h1>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
